# citcl

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
pipelines/: train_acl_arc.py  train_scicite.py  train_soft.py
plan/: colab_run.ipynb  colab_run.md  implementation_plan.md  walkthrough.md
src/: __init__.py  config.py  data.py  model.py  trainer.py
