[project]
name = "citcl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "transformers>=4.46.3",
    "datasets>=2.19.0,<3.0.0",
    "torch>=2.4.1",
    "scikit-learn>=1.3.2",
    "pandas>=2.0.3",
    "tqdm>=4.67.3",
    "accelerate>=1.0.1"
]

